<resources>
    <string name="app_name">WorkTracker</string>

    <string name="app_navigation_home">Timer</string>
    <string name="app_navigation_projects">Projects</string>
    <string name="app_navigation_settings">Settings</string>

    <string name="screen_login">Login</string>
    <string name="screen_timer">Timer</string>
    <string name="screen_projects">Projects</string>
    <string name="screen_settings">Settings</string>

    <string name="button_login">Login</string>
    <string name="button_start">Start</string>
    <string name="button_stop">Stop</string>
    <string name="button_continue">Continue</string>
    <string name="button_restart">Restart</string>
    <string name="button_save">Save</string>

</resources>
