<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="dev.jakubzika.worktracker.fragment.LoginFragment"
        android:label="@string/screen_login"
        tools:layout="@layout/fragment_login" >

        <action
            android:id="@+id/toTimerFragment"
            app:destination="@id/timerFragment" />

    </fragment>

    <fragment
        android:id="@+id/timerFragment"
        android:name="dev.jakubzika.worktracker.fragment.TimerFragment"
        android:label="@string/screen_timer"
        tools:layout="@layout/fragment_timer" />

    <fragment
        android:id="@+id/projectsFragment"
        android:name="dev.jakubzika.worktracker.fragment.ProjectsFragment"
        android:label="@string/screen_projects"
        tools:layout="@layout/fragment_projects" />

    <fragment
        android:id="@+id/settingsFragment"
        android:label="@string/screen_settings"
        android:name="dev.jakubzika.worktracker.fragment.SettingsFragment" />

</navigation>