<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.TimerFragment">

    <View
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_background_shape"
        android:layout_marginTop="@dimen/size_16"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/timeView"
        style="@style/Text.Stopwatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/screen_horizontal_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        tools:text="00:00:00" />

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="@dimen/size_0"
        android:layout_height="wrap_content"
        android:text="@string/button_start"
        android:layout_marginStart="@dimen/screen_horizontal_padding"
        android:layout_marginEnd="@dimen/screen_horizontal_padding"
        app:layout_constraintTop_toBottomOf="@id/timeView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/buttonStop"
        android:layout_width="@dimen/size_0"
        android:layout_height="wrap_content"
        android:text="@string/button_stop"
        android:layout_marginStart="@dimen/screen_horizontal_padding"
        android:layout_marginEnd="@dimen/screen_horizontal_padding"
        app:layout_constraintTop_toBottomOf="@id/timeView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/buttonGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="buttonContinue,buttonRestart,buttonSave" />

    <Button
        android:id="@+id/buttonContinue"
        android:text="@string/button_continue"
        android:layout_width="@dimen/size_0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/screen_horizontal_padding"
        android:layout_marginEnd="@dimen/screen_horizontal_padding"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/timeView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonRestart" />

    <Button
        android:id="@+id/buttonRestart"
        android:layout_width="@dimen/size_0"
        android:layout_height="wrap_content"
        android:text="@string/button_restart"
        android:layout_marginStart="@dimen/screen_horizontal_padding"
        android:layout_marginEnd="@dimen/screen_horizontal_padding"
        app:layout_constraintTop_toBottomOf="@id/buttonContinue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonSave" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="@dimen/size_0"
        android:layout_height="wrap_content"
        android:text="@string/button_save"
        android:layout_marginStart="@dimen/screen_horizontal_padding"
        android:layout_marginEnd="@dimen/screen_horizontal_padding"
        app:layout_constraintTop_toBottomOf="@id/buttonRestart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>